fixed alignment

--- a/app/styles/components/_callout-auth.scss
+++ b/app/styles/components/_callout-auth.scss
@@ -1,4 +1,4 @@
-.callout_auth {
+.callout-auth {
   background-color: $light-grey;
   border: 1px solid $light-grey-border;
   padding: 2rem;
